# wrkr

./: .cursorrules  .dockerignore  .gitattributes  .gitignore  .luarc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  RELEASING.md  cspell.config.yaml  install.sh  pyproject.toml
.config/: nextest.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json  postCreate.sh
.github/: LABELS.md  MAINTAINER_GUIDE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_request.md  feature_request.md
.github/workflows/: _checks.yml  ci.yml  codeql.yml  dependency-review.yml  docker-publish.yml  docs.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
examples/: grpc_aggregate.lua  json_aggregate.lua  lifecycle.lua  plaintext.lua  ramping_arrival_rate.lua  ramping_vus.lua  summary.json  thresholds_group.lua
examples/lib/: checks.lua  example.lua  grpc_checks.lua  pool.lua  synthetic_analytics.lua  synthetic_orders.lua
examples/protos/: analytics.proto
homebrew/: wrkr.rb
schemas/: wrkr.ndjson.v1.line.schema.json  wrkr.ndjson.v1.progress.schema.json  wrkr.ndjson.v1.summary.schema.json
tools/coverage/: README.md
tools/perf/: compare_wrk.sh  k6_grpc_plaintext.js  k6_hello.js  k6_post_json.js  k6_wfb_grpc_aggregate.js  k6_wfb_json_aggregate.js  (+9 more)
wrkr/: Cargo.toml
wrkr-core/: Cargo.toml
wrkr-core/src/: config.rs  error.rs  gate.rs  grpc.rs  http.rs  iteration_metrics.rs  lib.rs  metrics_agg.rs  metrics_context.rs  pacer.rs  progress.rs  proto.rs  request_metrics.rs  run.rs  runner.rs  summary.rs  thresholds.rs  thresholds_eval.rs  vu.rs
wrkr-core/src/grpc/: client.rs  codec.rs  codec_bytes.rs  convert.rs  error.rs  kind.rs  metadata.rs  types.rs  wire.rs
wrkr-core/src/grpc/wire/: coerce.rs  decode.rs  encode.rs  map.rs  packed.rs  primitives.rs  scalar.rs
wrkr-core/src/http/: estimate.rs  util.rs
wrkr-core/src/runner/: config.rs  error.rs  metrics.rs  outputs.rs  progress.rs  run.rs  schedule.rs  shared.rs  shared_value.rs  stats.rs  thresholds.rs  vu.rs
wrkr-core/tests/: cli_overrides_precedence.rs
wrkr-grpc/: Cargo.toml
wrkr-grpc/src/: kind.rs  lib.rs  proto.rs  shared.rs  wire.rs
wrkr-grpc/src/wire/: coerce.rs  decode.rs  encode.rs  map.rs  primitives.rs  scalar.rs
wrkr-http/: Cargo.toml
wrkr-http/src/: client.rs  error.rs  estimate.rs  lib.rs  types.rs
wrkr-lua/: Cargo.toml  README.md
wrkr-lua/lua-stubs/wrkr/: _types.lua  check.lua  debug.lua  env.lua  fs.lua  group.lua  grpc.lua  http.lua  init.lua  json.lua  metrics.lua  shared.lua  uuid.lua  vu.lua
wrkr-lua/src/: debugger.rs  editor_stubs.rs  group_api.rs  grpc_api.rs  grpc_shared.rs  http_api.rs  json_util.rs  lib.rs  lifecycle.rs  loader.rs  metrics_api.rs  modules.rs  options.rs  value_util.rs  vu.rs
wrkr-lua/src/modules/: check.rs  debug.rs  env.rs  fs.rs  group.rs  grpc.rs  http.rs  json.rs  metrics.rs  mod.rs  shared.rs  uuid.rs  vu.rs  wrkr.rs
wrkr-lua/src/modules/check/: record.rs
wrkr-lua/src/modules/grpc/: client.rs  opts.rs  path.rs  result.rs
wrkr-lua/src/modules/http/: opts.rs  result.rs  url.rs
wrkr-lua/src/modules/metrics/: opts.rs
wrkr-lua/src/modules/shared/: opts.rs  result.rs
wrkr-lua/tests/: check_any_value.rs  e2e_grpc.rs  e2e_grpc_aggregate.rs  e2e_http.rs  e2e_http_more.rs  e2e_invalid.rs  e2e_no_server_more.rs  e2e_shared.rs  editor_stubs.rs  full_lifecycle.rs  grpc_unary.rs  handle_summary.rs  handle_summary_files.rs  http_headers.rs  http_name_tag.rs  http_verbs.rs  lifecycle.rs  lua_runner.rs  metrics_tags.rs  options_parsing.rs  parse_script_options.rs  parse_script_options_invalid.rs  scenario_tags_checks_http.rs  scenario_tags_metrics.rs
wrkr-lua/tests/scripts/: check_any_value.lua  duration.lua  grpc_aggregate.lua  grpc_unary.lua  handle_summary_checks_by_name.lua  handle_summary_invalid_path.lua  handle_summary_non_table.lua  handle_summary_outputs.lua  http_headers.lua  http_name.lua  http_verbs.lua  invalid_http_name.lua  invalid_metric_name.lua  lifecycle.lua  metrics_tags.lua  modular.lua  options_aliases_arrival_rate.lua  options_aliases_ramping_vus.lua  options_invalid_duration.lua  options_invalid_thresholds.lua  plaintext.lua  post_echo.lua  post_json.lua  query_params.lua  ramping_arrival_rate.lua  ramping_vus.lua  scenario_tags.lua  scenario_tags_checks_http.lua  scenario_tags_metrics.lua  setup_nil.lua  shared_iterations.lua  shared_store.lua  shared_store_multi_vu.lua  thresholds.lua  thresholds_selectors.lua  timeout.lua  uuid.lua  wrkr_style.lua
wrkr-lua/tests/scripts/data/: payload.txt
wrkr-lua/tests/scripts/lib/: checks.lua
wrkr-lua/tests/scripts/protos/: analytics.proto
wrkr-lua/tests/support/: mod.rs
wrkr-metrics/: Cargo.toml
wrkr-metrics/src/: agg.rs  key.rs  lib.rs  metrics.rs  registry.rs  tags.rs
wrkr-shared/: Cargo.toml
wrkr-shared/src/: store.rs
wrkr-testserver/: Cargo.toml  build.rs
wrkr-testserver/src/: grpc.rs  lib.rs  main.rs
wrkr-tools-compare-perf/: Cargo.toml
wrkr-tools-compare-perf/src/: app.rs  build.rs  cases.rs  cli.rs  lib.rs  main.rs  parse.rs  report.rs  runner.rs  server.rs  tools.rs  types.rs
wrkr-value/: Cargo.toml
wrkr/assets/: dashboard.css  dashboard.js
wrkr/src/: cli.rs  exit_codes.rs  export_scenario.rs  init.rs  main.rs  output.rs  run.rs  run_error.rs  run_support.rs  runtime.rs  scenario_yaml.rs  script_language.rs  web.rs
wrkr/src/init/: fs.rs  language.rs  lua.rs
wrkr/src/output/: human.rs  json.rs
wrkr/src/output/human/: duration.rs  format.rs  progress.rs  summary.rs
wrkr/src/runtime/: error.rs  factory.rs  lua.rs  script_runtime.rs  types.rs
wrkr/src/web/: dashboard.rs  server.rs
wrkr/templates/: index.html  offline.html
wrkr/tests/: e2e_dashboard_out.rs  e2e_lua.rs  e2e_stats_rps.rs  e2e_web_ui.rs  exit_codes.rs
wrkr/tests/fixtures/scenario_yaml/: flat.yaml  multi.yaml  nested.yaml
wrkr/tests/scripts/: checks_fail.lua  hello_world.lua  thresholds_fail.lua
(+83 files in other folders)
