[workspace]
resolver = "3"
members = [
    "wrkr",
    "wrkr-core",
    "wrkr-shared",
    "wrkr-lua",
    "wrkr-metrics",
    "wrkr-testserver",
    "wrkr-value",
]

[workspace.dependencies]
strum = { version = "0.27", features = ["derive"] }
prost = "0.14.3"
prost-types = "0.14.3"
prost-reflect = "0.16.3"
tonic = "0.14.2"
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"
tonic-prost = "0.14.2"

# Tooling crates
anyhow = "1.0.97"
clap = { version = "4.5.27", features = ["derive", "env"] }
sysinfo = "0.33.1"
tempfile = "3.15.0"

[workspace.package]
version = "0.0.7"
edition = "2024"
authors = ["Andrew Sumskoy <getansum@nogc.io>"]
license = "AGPL-3.0-only"
homepage = "https://wrkr.nogc.io"
repository = "https://github.com/nogcio/wrkr"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# panic = "abort"
strip = true

# Like release, but keeps enough symbol/debug info for profiling tools (sample/Instruments).
[profile.profiling]
inherits = "release"
strip = "none"
debug = 1
