[package]
name = "wrkr-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
bytes = "1"
ahash = "0.8"
hdrhistogram = "7"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
wrkr-value = { path = "../wrkr-value" }
prost = { workspace = true }
prost-reflect = { workspace = true }
prost-types = { workspace = true }
strum = { workspace = true }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tonic = { workspace = true, features = ["tls-webpki-roots", "tls-ring"] }
url = "2"

[lints]
workspace = true
