[package]
name = "wrkr-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
bytes = "1"
ahash = "0.8"
hdrhistogram = "7"
wrkr-grpc = { path = "../wrkr-grpc", optional = true }
wrkr-http = { path = "../wrkr-http", optional = true }
wrkr-shared = { path = "../wrkr-shared" }
wrkr-value = { path = "../wrkr-value" }
wrkr-metrics = { path = "../wrkr-metrics" }
strum = { workspace = true }
thiserror = "2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
url = "2"
dashmap = "6.1.0"
smallvec = "1"

[features]
default = ["http"]
http = ["dep:wrkr-http"]
grpc = ["dep:wrkr-grpc"]

[lints]
workspace = true
