[package]
name = "wrkr-grpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
bytes = "1"
strum = { workspace = true }
tempfile = { workspace = true }
thiserror = "2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }

# gRPC/protobuf stack (kept aligned with workspace versions)
prost = { workspace = true }
prost-reflect = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true, features = ["tls-webpki-roots", "tls-ring"] }

# cross-language data contract
wrkr-value = { path = "../wrkr-value" }

[lints]
workspace = true
