[package]
name = "wrkr-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
bytes = "1"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-rustls = { version = "0.27", default-features = false, features = [
    "http1",
    "ring",
    "webpki-roots",
] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
strum = { workspace = true }
thiserror = "2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
url = "2"

[lints]
workspace = true
