[package]
name = "wrkr-lua"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
bytes = "1"
humantime = "2"
mlua = { version = "0.11", features = [
    "luajit",
    "async",
    "macros",
    "serialize",
    "send",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-transcode = "1"
thiserror = "2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
] }
uuid = { version = "1", features = ["v4"] }
url = "2"
wrkr-core = { path = "../wrkr-core", default-features = false }
wrkr-grpc = { path = "../wrkr-grpc", optional = true }
wrkr-http = { path = "../wrkr-http", optional = true }
wrkr-metrics = { path = "../wrkr-metrics" }
wrkr-value = { path = "../wrkr-value" }

[features]
default = ["http", "grpc"]
http = ["dep:wrkr-http", "wrkr-core/http"]
grpc = ["dep:wrkr-grpc", "wrkr-core/grpc"]

[dev-dependencies]
wrkr-testserver = { path = "../wrkr-testserver" }

[lints]
workspace = true
