[package]
name = "wrkr-metrics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
ahash = "0.8"
dashmap = "6"
hdrhistogram = "7"
thiserror = "2"
strum = { workspace = true }
parking_lot = "0.12"
smallvec = "1"

[lints]
workspace = true
