[package]
name = "wrkr-testserver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
axum = "0.8"
tokio = { version = "1", features = [
    "macros",
    "net",
    "rt",
    "signal",
    "sync",
    "time",
] }

[lints]
workspace = true
