[package]
name = "wrkr-testserver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
axum = "0.8"
prost = { workspace = true }
tonic-prost = { workspace = true }
tokio = { version = "1", features = [
    "macros",
    "net",
    "rt",
    "signal",
    "sync",
    "time",
] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
protoc-bin-vendored = { workspace = true }

[lints]
workspace = true
