[package]
name = "wrkr-tools-compare-perf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
sysinfo = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
