[package]
name = "wrkr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
askama = "0.12"
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
humantime = "2"
indicatif = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
    "process",
    "net",
    "sync",
    "time",
] }
mimalloc = "0.1.48"
wrkr-core = { path = "../wrkr-core" }
wrkr-lua = { path = "../wrkr-lua" }

[dev-dependencies]
tempfile = "3"
tokio-tungstenite = "0.26"
url = "2"
wrkr-testserver = { path = "../wrkr-testserver" }

[lints]
workspace = true
